--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UTOLD Cogitare AI Solutions - Transform Your Team's Performance</title>
+    <meta name="description" content="UTOLD Cogitare AI Solutions provides daily assessments and practice activities for organizations with 50-500 employees. Build essential skills through AI-powered quizzes and performance tracking.">
+    <meta name="keywords" content="employee training, skill assessment, AI learning, performance improvement, team development, corporate training, quizzes">
+    <meta name="author" content="UTOLD Cogitare AI Solutions">
+    
+    <!-- Open Graph Meta Tags for Social Sharing -->
+    <meta property="og:title" content="UTOLD Cogitare AI Solutions - Transform Your Team's Performance">
+    <meta property="og:description" content="Daily AI-powered assessments and practice activities for skill development in organizations.">
+    <meta property="og:url" content="https://www.utoldai.com">
+    <meta property="og:type" content="website">
     <style>
         * {
             margin: 0;
