--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UTOLD Cogitare AI Solutions - Transform Your Team's Performance</title>
-    <meta name="description" content="UTOLD Cogitare AI Solutions provides daily assessments and practice activities for organizations with 50-500 employees. Build essential skills through AI-powered quizzes and performance tracking.">
-    <meta name="keywords" content="employee training, skill assessment, AI learning, performance improvement, team development, corporate training, quizzes">
+    <title>UTOLD Cogitare AI Solutions - Transforming student Performance</title>
+    <meta name="description" content="UTOLD Cogitare AI Solutions provides daily assessments and practice activities for school students. Build essential skills through AI-powered quizzes and performance tracking.">
+    <meta name="keywords" content="skill assessment, AI learning, performance improvement, school, exams, CBSE, Telugu quizzes">
     <meta name="author" content="UTOLD Cogitare AI Solutions">
     
     <!-- Open Graph Meta Tags for Social Sharing -->
-    <meta property="og:title" content="UTOLD Cogitare AI Solutions - Transform Your Team's Performance">
-    <meta property="og:description" content="Daily AI-powered assessments and practice activities for skill development in organizations.">
+    <meta property="og:title" content="UTOLD Cogitare AI Solutions - Transforming Student Performance">
+    <meta property="og:description" content="Daily AI-powered assessments and practice activities for improving student performace">
     <meta property="og:url" content="https://www.utoldai.com">
     <meta property="og:type" content="website">
     <style>
@@ -322,7 +322,7 @@
     <header>
         <div class="container">
             <h1>UTOLD Cogitare AI Solutions</h1>
-            <p>Transform Your Team's Performance with Daily AI-Powered Assessments</p>
+            <p>Transform Student's Performance with Daily AI-Powered Assessments</p>
             <a href="#lead-form" class="cta-button">Get Started Today</a>
         </div>
     </header>
@@ -330,11 +330,11 @@
     <section class="features">
         <div class="container">
             <h2>Why Choose UTOLD Cogitare?</h2>
-            <p class="features-subtitle">Designed specifically for organizations with 50-500 employees</p>
+            <p class="features-subtitle">Designed specifically for school students</p>
             <div class="feature-grid">
                 <div class="feature-card">
                     <h3>📊 Daily Assessments</h3>
-                    <p>Track your team's progress with structured daily quizzes that measure skill development in real-time.</p>
+                    <p>Track progress with structured daily quizzes that measure skill development in real-time.</p>
                 </div>
                 <div class="feature-card">
                     <h3>🎯 Practice Activities</h3>
@@ -342,19 +342,19 @@
                 </div>
                 <div class="feature-card">
                     <h3>🧠 AI-Powered Insights</h3>
-                    <p>Leverage artificial intelligence to identify skill gaps and personalize learning paths for each team member.</p>
+                    <p>Leverage artificial intelligence to identify skill gaps and personalize learning paths.</p>
                 </div>
                 <div class="feature-card">
                     <h3>📈 Performance Tracking</h3>
-                    <p>Monitor individual and team progress with comprehensive analytics and actionable insights.</p>
+                    <p>Monitor progress with comprehensive analytics and actionable insights.</p>
                 </div>
                 <div class="feature-card">
                     <h3>🔧 Customizable Skills</h3>
-                    <p>Choose from our extensive inventory of essential business skills and create custom learning paths.</p>
+                    <p>Choose from our extensive inventory of essential skills and create custom learning paths.</p>
                 </div>
                 <div class="feature-card">
                     <h3>⚡ Flexible Delivery</h3>
-                    <p>Select between intensive one-day sprints or consistent weekly streaks to match your team's schedule.</p>
+                    <p>Select between intensive one-day sprints or consistent weekly streaks to match your schedule.</p>
                 </div>
             </div>
         </div>
@@ -363,10 +363,10 @@
     <section class="skills-section">
         <div class="container">
             <h2>Our Skill Inventory</h2>
-            <p class="skills-subtitle">Sample skills from our comprehensive catalog</p>
+            <p class="skills-subtitle">Subjects covered</p>
             <div class="skills-grid">
                 <div class="skill-card">
-                    <h4>🗣️ Effective Communication</h4>
+                    <h4>🗣️ </h4>
                     <p>Master verbal and written communication techniques</p>
                 </div>
                 <div class="skill-card">
