--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UTOLD Cogitare AI Solutions - Transforming student Performance</title>
+    <title>UTOLD Cogitare AI Solutions</title>
     <meta name="description" content="UTOLD Cogitare AI Solutions provides daily assessments and practice activities for school students. Build essential skills through AI-powered quizzes and performance tracking.">
     <meta name="keywords" content="skill assessment, AI learning, performance improvement, school, exams, CBSE, Telugu quizzes">
     <meta name="author" content="UTOLD Cogitare AI Solutions">
