--- a/index.html
+++ b/index.html
@@ -407,6 +407,9 @@
                         <li>Perfect for focused training sessions</li>
                         <li>Ideal for rapid skill assessment</li>
                     </ul>
+                    <button onclick="window.location.href='https://razorpay.me/@utoldai'">
+  Subscribe Now
+</button>
                 </div>
                 <div class="option-card">
                     <h3>📅 Weekly Streak</h3>
@@ -418,6 +421,9 @@
                         <li>Reinforces knowledge retention</li>
                         <li>Encourages daily engagement</li>
                     </ul>
+                    <button onclick="window.location.href='https://razorpay.me/@utoldai'">
+  Subscribe Now
+</button>
                 </div>
             </div>
         </div>
