--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                         <li>Perfect for focused training sessions</li>
                         <li>Ideal for rapid skill assessment</li>
                     </ul>
-                    <button onclick="window.location.href='https://razorpay.me/@utoldai'">
+                    <button class = "submit-button" onclick="window.location.href='https://razorpay.me/@utoldai'">
   Subscribe Now
 </button>
                 </div>
@@ -421,7 +421,7 @@
                         <li>Reinforces knowledge retention</li>
                         <li>Encourages daily engagement</li>
                     </ul>
-                    <button onclick="window.location.href='https://razorpay.me/@utoldai'">
+                    <button class = "submit-button" onclick="window.location.href='https://razorpay.me/@utoldai'">
   Subscribe Now
 </button>
                 </div>
